# rs-summary

./: .gitignore  Cargo.toml  README.md  bench-max.mjs  bench-mean.mjs  bench.mjs  build.sh  check.sh  clippy.sh  doc.sh  fmt.sh  rs_summary.wasm  test.mjs  watch.sh
src/: count.rs  lib.rs  max.rs  mean.rs  sum.rs
src/count/: std3u.rs  wasm3u.rs
src/max/: std6i.rs  wasm6i.rs
src/mean/: arithmetic.rs
src/mean/arithmetic/: std5f.rs  wasm5f.rs
src/sum/: std4f.rs  std8f.rs  wasm4f.rs  wasm8f.rs
