[package]
name = "rs-summary"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies]

[features]

ext_wasm = []

sum_std = []

sum_wasm8f = [ "ext_wasm" ]
sum_wasm = [
    "sum_wasm8f",
]

sum_simd8f = [ "ext_wasm" ]
sum_simd = [
    "sum_simd8f",
]
