[package]
name = "rs-summary"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies]

[features]

ext_wasm = []

sum_std = []
cnt_std = []
mean_arithmetic_std = []
max_std = []

sum_wasm8f = [ "ext_wasm" ]
sum_wasm4f = [ "ext_wasm" ]
sum_wasm = [
    "sum_wasm8f",
    "sum_wasm4f",
]

sum_simd8f = [ "ext_wasm" ]
sum_simd4f = [ "ext_wasm" ]
sum_simd = [
    "sum_simd8f",
    "sum_simd4f",
]

cnt_wasm3u = [ "ext_wasm" ]
cnt_wasm = [
    "cnt_wasm3u",
]

cnt_simd3u = [ "ext_wasm" ]
cnt_simd = [
    "cnt_simd3u",
]

max_wasm6i = [ "ext_wasm" ]
max_wasm = [
    "max_wasm6i",
]

max_simd6i = [ "ext_wasm" ]
max_simd = [
    "max_simd6i",
]

mean_arithmetic = []
mean_simd = []

mean_arithmetic_wasm5f = [ "ext_wasm" ]
mean_arithmetic_wasm = [
    "mean_arithmetic_wasm5f",
]

mean_arithmetic_simd5f = [ "ext_wasm" ]
mean_arithmetic_simd = [
    "mean_arithmetic_simd5f",
]

